Added home page with image maps

--- a/index.html
+++ b/index.html
@@ -5,40 +5,198 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
-	<body>
-	  <div class='navbar navbar-inverse navbar-static-top'>
+
+	<!-- Title Bar -->
+
+	<div class='navbar navbar-inverse navbar-static-top'>
 		<h1 class='title'>Dungeons & Dragons 5th Edition Character Creator</h1>
 	  </div>
-	  <div class='container col-md-12'>
+
+	<!-- Choice Text -->
+
+	<div class='container col-md-12 choiceText'>
 		<h2>Choose your Path...</h2>
-	  </div>
-	  <div class='barScene'>
-		<h2> </h2>
-		<h3>Barbarian</h3>
-			<p>The rage of the old gods fills his heart</p>
-		<h3>Bard</h3>
-			<p>The magics of creation are harnessed through his words and songs</p>
-		<h3>Cleric</h3>
-			<p>Blessed is he, champion of the divine one</p>
-			<p> </p>
-		<h3>Druid</h3>
-			<p>Child of the earth and moon, priest of the old gods</p>
-		<h3>Fighter</h3>
-			<p>soldier, general, thug, or bandit, his martial skills are unequaled</p>
-		<h3>Monk</h3>
-			<p>Master of the martial arts, he strives for spiritual perfection</p>
-		<h3>Paladin</h3>
-			<p>Warrior of the faith, devout and steadfast</p>
-		<h3>Ranger</h3>
-			<p>At the precipice civilization and the wild, he fights to protect both</p>
-		<h3>Rogue</h3>
-			<p>The subtle knife, sly and sneaky; he lurks in the night</p>
-		<h3>Sorcerer</h3>
-			<p>Power courses through his veins, a gift from his ancestor</p>
-			<p> </p>
-		<h3>Warlock</h3>
-			<p>A pact not soon forgotten gives him power beyond imagination</p>
-		<h3>Wizard</h3>
-			<p>His long nights of studying ancient texts reveal untapped powers waiting to be grasped</p>
+	</div>
+
+    <div class="characterFloaters">
+
+        <!-- Barbarian Floater -->
+
+        <div class="barbar">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="barbarImage" src="Images/Barbar2.gif" />
+            </span>
+            <span class="charText">
+                <h3>Barbarian</h3>
+                <p>The rage of the old gods fills her heart</p>
+            </span>
+        </div>
+
+        <!-- Bard Floater -->
+
+        <div class="bard">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="bardImage" src="Images/Bard.gif" />
+            </span>
+            <span class="charText">
+                <h3>Bard</h3>
+			    <p>The magics of creation are harnessed through his words and songs</p>
+            </span>
+        </div>
+
+        <!-- Cleric Floater -->
+
+        <div class="cleric">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="clericImage" src="Images/Cleric.gif" />
+            </span>
+            <span class="charText">
+                <h3>Cleric</h3>
+			    <p>Blessed is she, champion of the divine one</p>
+            </span>
+        </div>
+
+        <!-- Druid Floater -->
+
+        <div class="druid">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="druidImage" src="Images/Druid.gif" />
+            </span>
+            <span class="charText">
+               <h3>Druid</h3>
+			    <p>Daughter of the earth and moon, priestess of the old gods</p>
+            </span>
+        </div>
+
+        <!-- Fighter Floater -->
+
+        <div class="fighter">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="fighterImage" src="Images/Fighter.gif" />
+            </span>
+            <span class="charText">
+                <h3>Fighter</h3>
+			    <p>soldier, general, thug, or bandit, his martial skills are unequaled</p>
+            </span>
+        </div>
+
+        <!-- Monk Floater -->
+
+        <div class="monk">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="monkImage" src="Images/Monk.gif" />
+            </span>
+            <span class="charText">
+                 <h3>Monk</h3>
+			    <p>Master of the martial arts, he strives for spiritual perfection</p>
+            </span>
+        </div>
+
+        <!-- Paladin Floater -->
+
+        <div class="paladin">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="paladinImage" src="Images/Paladin.gif" />
+            </span>
+            <span class="charText">
+                <h3>Paladin</h3>
+			    <p>Warrior of the faith, devout and steadfast</p>
+            </span>
+        </div>
+
+        <!-- Ranger Floater -->
+
+        <div class="ranger">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="rangerImage" src="Images/Ranger.gif" />
+            </span>
+            <span class="charText">
+                <h3>Ranger</h3>
+			    <p>At the precipice civilization and the wild, he fights to protect both</p>
+            </span>
+        </div>
+
+        <!-- Rogue Floater -->
+
+        <div class="rogue">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="rogueImage" src="Images/Rogue.gif" />
+            </span>
+            <span class="charText">
+                <h3>Rogue</h3>
+			    <p>The subtle knife, sly and sneaky; she lurks in the shadows</p>
+            </span>
+        </div>
+
+        <!-- Sorcerer Floater -->
+
+        <div class="sorcerer">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="sorcererImage" src="Images/Sorcerer.gif" />
+            </span>
+            <span class="charText">
+                <h3>Sorcerer</h3>
+			    <p>Power courses through her veins, a gift from her ancestor</p>
+            </span>
+        </div>
+
+        <!-- Warlock Floater -->
+
+        <div class="warlock">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="warlockImage" src="Images/Warlock.gif" />
+            </span>
+            <span class="charText">
+                <h3>Warlock</h3>
+			    <p>A pact not soon forgotten gives her power beyond imagination</p>
+            </span>
+        </div>
+
+        <!-- Wizard Floater -->
+
+        <div class="wizard">
+            <img class='mainImage2' src="Images/thePageThing2.png" />
+            <span class="charImage">
+                <img class="wizardImage" src="Images/Wizard.gif" />
+            </span>
+            <span class="charText">
+               <h3>Wizard</h3>
+			    <p>His long nights of studying ancient texts reveal untapped powers waiting to be grasped</p>
+            </span>
+        </div>
+
+    </div>
+	  <!-- The Image Map of the Character selector...really long -->
+
+	  <img class='mainImage' src="Images/thePageThing.gif" alt="Character Collage" usemap="#Map" />
+	  <map name="Map" id="Map">
+		  <area id="warlockClicker" alt="" title="" href="#"  shape="poly" coords="0,176,10,169,26,172,38,180,47,193,52,202,50,216,50,248,48,265,62,300,79,323,98,347,117,362,108,362,101,357,98,368,86,389,104,414,120,422,133,428,151,429,162,464,141,444,141,457,130,437,105,428,90,415,82,412,74,430,78,470,68,487,70,508,83,542,98,565,94,590,69,592,77,609,48,603,37,585,8,553,0,532" />
+          <area id="foxClicker" alt="" title="" href="#" shape="poly" coords="120,464,116,469,115,478,102,482,93,486,91,490,70,503,74,517,82,539,84,539,93,554,97,565,102,576,108,581,118,579,127,577,128,574,120,569,118,551,116,541,127,529,128,522,134,520,141,517,157,504,155,490,158,485,158,469,152,472,146,477,131,477" />
+		  <area id="wizardClicker" alt="" title="" href="#" shape="poly" coords="96,36,67,55,63,94,56,134,44,149,35,174,53,197,55,204,50,262,64,298,83,322,133,270,153,285,163,268,180,259,165,194,172,187,160,162,162,150,134,118,123,65,112,44" />
+		  <area alt="" title="" href="#" shape="poly" coords="436,33,433,37,431,70,418,73,405,86,402,95,384,107,393,128,397,130,392,142,374,149,361,144,358,134,335,136,336,143,301,182,308,203,310,207,310,221,313,231,332,229,334,233,330,243,328,255,330,260,348,245,357,248,368,256,368,267,374,268,384,256,390,259,393,263,388,274,394,281,395,293,393,302,390,312,394,312,398,321,408,322,411,318,418,322,420,311,413,307,420,299,417,285,424,275,433,274,449,235,451,231,462,220,470,201,472,191,476,183,467,177,465,168,465,160,470,155,465,133,469,131,469,127,466,120,467,107,465,96,460,89,449,77,440,72,438,43,441,37" />
+		  <area id=barabarClicker" alt="" title="" href="#" shape="poly" coords="227,48,223,51,213,58,188,52,172,56,189,59,185,63,190,66,186,73,190,72,161,93,189,91,182,105,194,103,187,111,196,124,166,146,173,152,166,159,166,163,164,168,176,187,169,194,173,206,184,196,189,211,190,218,195,217,202,224,204,228,201,235,192,252,186,259,182,265,164,273,157,289,181,312,193,283,185,311,204,330,213,324,218,319,217,313,220,309,212,308,213,301,225,299,225,291,208,284,204,281,208,276,225,261,255,251,259,235,270,223,284,249,300,260,306,275,314,269,326,258,324,244,332,232,315,234,309,228,307,209,297,184,299,177,330,143,324,134,363,87,338,101,306,132,304,128,325,87,329,68,313,85,292,121,273,115,259,108,262,98,270,93,260,89,257,80,249,65,242,63,235,55" />
+		  <area id="fighterClicker" alt="" title="" href="#" shape="poly" coords="208,281,227,289,229,295,225,308,219,314,221,321,205,332,186,317,133,274,87,329,117,360,119,370,135,383,154,364,145,363,128,349,134,329,161,323,169,331,176,336,183,347,181,352,173,360,173,368,154,386,156,410,165,416,172,423,166,423,170,449,171,461,175,482,182,486,177,504,184,514,181,549,175,558,166,566,158,580,158,591,176,596,211,591,223,587,231,571,247,569,248,577,271,590,296,600,319,558,321,565,328,576,328,591,332,595,333,602,338,606,339,611,358,618,392,618,398,608,388,591,384,580,379,563,376,544,368,520,360,493,368,476,378,463,370,437,378,428,386,428,395,411,413,423,414,431,418,433,418,426,426,404,425,393,420,385,442,381,442,377,413,359,416,352,442,339,416,336,393,347,393,315,388,317,385,314,390,300,392,285,386,276,389,263,384,258,374,272,364,272,365,258,348,248,332,261,321,263,317,271,308,276,304,278,298,263,283,252,257,253,226,263" />
+		  <area id="monkClicker" alt="" title="" href="#" shape="poly" coords="561,48,547,52,539,64,536,86,530,84,529,91,530,98,536,105,540,122,526,130,520,128,489,145,482,156,478,182,474,196,473,208,465,222,451,233,435,274,427,276,421,282,421,292,422,298,418,304,421,307,420,322,438,335,449,329,450,312,454,311,458,300,463,301,467,289,474,279,494,246,506,216,510,230,508,239,505,250,504,262,494,296,485,329,458,405,445,427,434,461,418,514,418,522,400,570,391,592,400,608,413,611,431,602,440,571,453,564,469,545,486,545,509,552,520,552,526,515,544,508,544,552,576,556,602,544,614,554,613,559,618,572,625,583,628,593,635,596,649,602,680,601,673,587,662,573,660,559,657,554,659,544,651,535,650,514,617,331,618,320,612,300,612,276,620,263,634,284,630,287,634,295,635,303,643,306,649,310,653,315,656,321,652,326,656,330,660,330,672,343,682,345,686,332,688,316,681,304,676,297,681,290,675,278,669,271,665,269,656,239,649,223,641,210,644,205,637,187,634,163,620,145,602,132,601,122,616,115,612,105,598,114,590,127,581,124,581,107,589,98,589,83,586,84,585,68,580,54,568,49" />
+          <area alt="clericClicker" title="" href="#" shape="poly" coords="437,32,433,36,435,40,433,70,417,75,406,86,401,95,381,110,396,128,397,134,392,144,376,148,373,147,362,144,360,135,334,133,334,140,326,154,305,179,307,184,308,190,306,196,313,207,319,219,325,223,333,227,335,233,333,241,331,255,344,248,357,243,368,247,372,253,385,252,392,257,391,269,394,278,397,289,395,299,404,297,418,291,419,281,427,275,436,271,441,253,447,236,458,225,470,205,474,182,466,176,462,165,469,155,465,136,470,131,466,119,468,107,466,97,454,81,443,72,438,70,438,41,441,36" />
+		  <area id="sorcererClicker" alt="" title="" href="#" shape="poly" coords="711,61,687,48,667,33,673,47,651,47,641,39,644,48,622,51,588,57,591,59,612,56,616,58,619,64,628,68,646,74,632,75,617,76,631,77,641,80,632,82,617,87,601,87,597,83,594,87,600,91,621,89,614,95,595,106,593,109,608,100,628,97,638,99,642,101,625,111,637,107,650,106,638,113,631,111,635,114,621,117,630,119,643,119,651,114,666,108,670,110,656,116,650,121,662,117,674,114,670,121,660,129,650,133,640,125,641,134,634,133,627,127,628,133,635,137,644,138,654,135,663,131,672,128,669,134,664,140,656,150,631,150,633,159,645,157,637,163,639,169,654,162,639,189,644,199,646,203,644,210,647,217,655,209,666,190,669,201,671,208,671,218,656,235,661,243,664,249,671,265,675,273,678,279,683,287,681,294,679,297,685,305,684,312,692,315,690,323,687,342,683,347,674,348,665,341,659,331,653,332,650,327,653,320,651,315,645,316,643,308,635,306,630,294,627,287,625,289,622,306,622,318,628,331,630,342,631,370,635,397,637,409,636,427,635,436,642,468,648,496,652,510,652,524,660,538,663,541,672,538,686,527,676,494,671,457,681,401,688,382,701,342,706,306,699,281,708,254,713,261,719,259,726,275,730,272,738,288,742,270,747,273,740,262,736,245,730,229,725,220,728,211,737,190,738,178,727,156,721,148,720,134,723,134,731,121,734,109,736,90,733,77,724,61,719,60,720,63" />
+		  <area id="rangerClicker" alt="" title="" href="#" shape="poly" coords="796,20,782,22,769,32,762,51,761,59,766,74,769,84,762,90,737,106,735,118,732,128,730,141,729,154,738,170,742,179,742,188,737,201,745,206,739,209,738,227,737,234,740,242,743,259,747,262,753,266,754,274,776,271,795,275,805,285,813,298,833,285,830,267,821,246,826,243,837,249,846,231,830,200,840,190,843,182,854,176,858,189,865,168,869,154,866,133,855,129,843,130,846,121,850,120,841,112,834,105,834,99,839,95,830,80,827,66,830,43,831,36,817,26,808,20" />
+		  <area id="bardClicker" alt="" title="" href="#" shape="poly" coords="766,272,746,279,740,294,730,312,736,318,738,330,742,344,746,360,736,371,735,377,730,383,730,389,725,393,722,382,711,386,711,389,716,394,714,404,708,407,702,428,692,440,704,442,710,443,708,460,718,450,724,467,710,474,690,497,698,503,710,487,730,476,734,486,732,511,724,527,734,540,742,546,748,552,750,572,742,581,720,593,720,597,732,604,742,601,757,602,768,600,770,610,786,614,802,613,814,603,809,584,814,559,820,551,830,541,827,532,842,535,852,526,858,515,868,503,865,497,853,483,860,478,846,437,848,430,860,441,846,405,837,388,850,377,864,367,876,354,868,352,853,363,830,377,830,371,825,363,812,356,810,354,797,345,803,341,809,325,812,305,805,287,794,276" />
+		  <area id="rogueClicker" alt="" title="" href="#" shape="poly" coords="910,1,896,10,884,27,871,13,871,16,880,30,882,48,890,62,892,74,896,90,882,102,863,89,856,96,846,108,852,117,850,122,846,126,855,125,868,134,871,146,872,152,868,164,864,182,859,194,852,180,845,183,842,191,836,198,848,226,849,231,844,253,826,247,827,253,832,267,836,285,835,295,834,307,815,351,819,355,842,315,860,295,860,306,866,349,871,347,878,352,878,356,871,363,871,386,878,390,875,426,871,435,870,492,874,504,878,505,872,539,863,563,855,577,834,595,870,597,883,595,897,590,906,577,908,551,915,508,922,511,924,491,933,495,924,477,920,434,912,429,908,393,905,385,915,381,907,365,906,339,911,343,915,333,917,345,923,357,929,381,933,403,939,402,943,415,948,428,946,429,949,438,948,447,951,469,948,500,952,495,950,512,956,505,958,523,968,508,974,527,981,555,988,571,992,594,1001,609,1008,614,1031,615,1036,612,1031,592,1025,571,1019,552,1012,523,1008,505,1020,508,1012,489,1005,473,999,447,996,435,986,423,974,399,961,359,958,305,952,256,955,252,958,262,960,275,969,282,972,290,978,311,994,378,984,309,992,327,1022,370,998,318,988,300,990,285,981,271,982,257,978,231,980,207,973,211,973,169,970,176,970,131,1007,124,1005,117,998,97,987,74,958,95,946,92,946,66,948,54,947,32,940,22,944,2,938,17,930,7" />
+		  <area id="paladinClicker" alt="" title="" href="#" shape="poly" coords="1060,4,1041,12,1034,26,1032,38,1034,51,1032,64,1007,72,1008,80,1004,89,999,90,1002,95,1008,108,1012,123,1008,129,982,134,976,138,972,160,976,168,976,200,982,203,982,213,987,232,983,243,988,265,994,284,995,303,1006,315,1024,359,1038,351,1064,318,1078,298,1091,291,1104,275,1122,273,1122,249,1116,227,1127,213,1134,219,1164,227,1179,218,1190,198,1198,197,1199,104,1170,101,1142,110,1126,118,1118,110,1103,94,1102,82,1112,71,1090,86,1072,79,1072,75,1082,72,1088,58,1095,34,1093,30,1087,11,1073,4" />
+		  <area id="druidClicker" alt="" title="" href="#" shape="poly" coords="1178,221,1175,227,1178,233,1170,234,1162,234,1159,227,1149,227,1126,224,1140,233,1136,237,1146,243,1139,247,1131,253,1138,264,1131,271,1120,277,1112,277,1104,285,1122,289,1123,294,1123,299,1121,305,1112,299,1096,296,1082,298,1076,305,1071,316,1059,330,1048,344,1035,360,1025,364,1016,393,1014,411,1010,427,1008,443,1007,462,1012,472,1023,477,1027,485,1031,499,1041,505,1056,497,1062,495,1064,504,1061,516,1057,538,1051,554,1039,560,1035,572,1046,574,1039,580,1034,588,1038,600,1042,604,1053,603,1068,606,1080,610,1092,604,1100,594,1106,603,1119,603,1137,608,1130,616,1149,620,1167,616,1172,604,1184,606,1180,582,1186,546,1198,562,1199,219,1187,219" />
+	  </map>
+
+
 	</body>
 </html>
